feat: mobile for hero done

--- a/src/sections/home/products/products.module.scss
+++ b/src/sections/home/products/products.module.scss
@@ -2,6 +2,8 @@
   padding: 150px 0 50px;
   max-width: 1200px;
   margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   .description {
     max-width: 36rem;
