--- a/src/sections/home/hero/components/showcase.module.scss
+++ b/src/sections/home/hero/components/showcase.module.scss
@@ -6,6 +6,10 @@
   height: 500px;
   margin-top: 100px;
 
+  @media (max-width: 540px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .image-container {
     background: rgba(37, 99, 235, 1);
     width: 100%;
@@ -18,6 +22,10 @@
 
     &.half {
       height: 40%;
+
+      @media (max-width: 540px) {
+        display: none;
+      }
     }
 
     &.third {
