--- a/src/sections/home/hero/hero.module.scss
+++ b/src/sections/home/hero/hero.module.scss
@@ -3,6 +3,8 @@
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .heading {
@@ -13,6 +15,7 @@
   font-weight: 700;
   letter-spacing: 0;
   color: rgba(209, 213, 219, 1);
+  white-space: pre-line;
 
   @media (min-width: 640px) {
     font-size: 4.5rem;
@@ -35,6 +38,12 @@
 
     .text {
       position: relative;
+    }
+  }
+
+  .linebreaker {
+    @media (min-width: 800px) {
+      display: none;
     }
   }
 }
@@ -60,6 +69,7 @@
   gap: 15px;
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
 
   @media (min-width: 640px) {
     margin-top: 2.5rem;
