--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,7 @@ body {
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 
 body {
