--- a/src/layouts/default/footer/footer.module.scss
+++ b/src/layouts/default/footer/footer.module.scss
@@ -1,36 +1,19 @@
 .footer {
   &-container {
     color: rgba(255, 255, 255, 1);
-    padding-top: 9.375rem;
-    padding-bottom: 3.75rem;
+    padding: 0 1rem 3.75rem;
     max-width: 1200px;
     margin: 0 auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    //   background-color: rgba(0, 0, 0, 1);
-    //   padding-left: 1.25rem;
-    //   padding-right: 1.25rem;
+    // border-top: 1px solid rgba(255, 255, 255, 1);
 
     @media (min-width: 520px) {
-      padding-top: 11rem;
+      padding-top: 5rem;
       padding-bottom: 5rem;
-      // padding-left: 2.8125rem;
-      // padding-right: 2.8125rem;
-    }
-
-    @media (min-width: 768px) {
-      // padding-left: 3.75rem;
-      // padding-right: 3.75rem;
     }
 
     @media (min-width: 1024px) {
       padding-top: 6rem;
       padding-bottom: 6.25rem;
-    }
-
-    @media (min-width: 1280px) {
-      // padding-left: 9.375rem;
-      // padding-right: 9.375rem;
     }
 
     .cta {
@@ -60,15 +43,14 @@
           font-size: 2.25rem;
           line-height: 2.5rem;
         }
+
         @media (min-width: 768px) {
           font-size: 3rem;
           line-height: 1;
         }
+
         @media (min-width: 1024px) {
           font-size: 3.5rem;
-        }
-        @media (min-width: 1280px) {
-          font-size: 4rem;
         }
       }
 
@@ -77,23 +59,21 @@
         max-width: 420px;
         line-height: 1.375 !important;
         font-size: 1rem;
-        line-height: 1.5rem;
+        font-weight: 300;
 
         @media (min-width: 520px) {
           font-size: 1.125rem;
           line-height: 1.75rem;
         }
+
         @media (min-width: 768px) {
           font-size: 1.25rem;
           line-height: 1.75rem;
         }
+
         @media (min-width: 1024px) {
           font-size: 1.375rem;
           max-width: 32rem;
-        }
-        @media (min-width: 1280px) {
-          font-size: 1.625rem;
-          max-width: 42rem;
         }
       }
 
@@ -197,7 +177,6 @@
         }
 
         .logo {
-          height: 0.9375rem;
           margin-top: -0.25rem;
           margin-bottom: 2rem;
 
